<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.0</version>
	</parent>

	<groupId>no.nav.skanmotovrig</groupId>
	<artifactId>skanmotovrig</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>ovrig</module>
		<module>avstem</module>
	</modules>

	<properties>
		<java.version>21</java.version>

		<camel.version>4.9.0</camel.version>
		<spring-cloud-starter-vault-config.version>4.2.0</spring-cloud-starter-vault-config.version>

		<logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
		<commons-compress.version>1.27.1</commons-compress.version>
		<commons-io.version>2.18.0</commons-io.version>
		<context-propagation.version>1.1.2</context-propagation.version>
		<bouncycastle.version>1.79</bouncycastle.version>
		<jiraapi.version>1.1.1</jiraapi.version>

		<!-- test -->
		<spring-cloud-contract-wiremock.version>4.2.0</spring-cloud-contract-wiremock.version>
		<sshd-core.version>2.14.0</sshd-core.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.skanmotovrig</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.skanmotovrig</groupId>
				<artifactId>ovrig</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.skanmotovrig</groupId>
				<artifactId>avstem</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>no.nav.dok-common</groupId>
				<artifactId>jiraapi</artifactId>
				<version>${jiraapi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-dependencies</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-vault-config</artifactId>
				<version>${spring-cloud-starter-vault-config.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-compress</artifactId>
				<version>${commons-compress.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>context-propagation</artifactId>
				<version>${context-propagation.version}</version>
			</dependency>

			<!-- decrypt pgp-->
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk18on</artifactId>
				<version>${bouncycastle.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcpg-jdk18on</artifactId>
				<version>${bouncycastle.version}</version>
			</dependency>

			<!-- Test -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- Apache sshd -->
			<dependency>
				<groupId>org.apache.sshd</groupId>
				<artifactId>sshd-core</artifactId>
				<version>${sshd-core.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.sshd</groupId>
				<artifactId>sshd-sftp</artifactId>
				<version>${sshd-core.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.sshd</groupId>
				<artifactId>sshd-scp</artifactId>
				<version>${sshd-core.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>